Launcher now actually launches client JAR as separate process