@@ -6,21 +6,20 @@ import java.net.*;
 import java.nio.file.*;
 import java.security.*;
 import java.util.Scanner;
+import java.util.jar.Manifest;
 
 /**
- * Jartix Launcher — стримит клиент с сервера, расшифровывает в памяти.
- * Файлы НЕ создаются на диске пользователя.
+ * Jartix Launcher — стримит клиент с сервера, расшифровывает, запускает.
  */
 public class Launcher {
 
     private static final String SERVER = System.getenv().getOrDefault("JARTIX_SERVER", "https://launcher-server-wl84.onrender.com");
-    private static final String VERSION = "1.0.0";
 
     public static void main(String[] args) throws Exception {
         Scanner sc = new Scanner(System.in);
-        System.out.println("╔══════════════════════════════════════╗");
-        System.out.println("║         JARTIX LAUNCHER             ║");
-        System.out.println("╚══════════════════════════════════════╝");
+        System.out.println("========================================");
+        System.out.println("          JARTIX LAUNCHER");
+        System.out.println("========================================");
         System.out.println();
 
         // 1. Get HWID
@@ -28,88 +27,86 @@ public class Launcher {
         System.out.println("[HWID] " + hwid.substring(0, 16) + "...");
 
         // 2. Login
-        System.out.print("Логин: ");
+        System.out.print("Login: ");
         String username = sc.nextLine().trim();
-        System.out.print("Пароль: ");
+        System.out.print("Password: ");
         String password = sc.nextLine().trim();
 
         String loginToken = login(username, password);
         if (loginToken == null) {
-            System.out.println("[ERROR] Неверные credentials");
+            System.out.println("[ERROR] Invalid credentials");
+            waitForExit();
             return;
         }
-        System.out.println("[AUTH] Успешный вход");
+        System.out.println("[AUTH] Login success");
 
         // 3. Activate key if needed
-        System.out.print("Ключ (или Enter если уже активирован): ");
+        System.out.print("Key (or Enter if already activated): ");
         String key = sc.nextLine().trim();
         if (!key.isEmpty()) {
             if (activateKey(loginToken, key, hwid)) {
-                System.out.println("[KEY] Ключ активирован!");
+                System.out.println("[KEY] Key activated!");
             } else {
-                System.out.println("[KEY] Ключ уже активирован или ошибка");
+                System.out.println("[KEY] Key already activated or error");
             }
         }
 
         // 4. Validate session
         String session = validateSession(loginToken, hwid);
         if (session == null) {
-            System.out.println("[ERROR] Нет активной подписки или HWID не совпадает");
+            System.out.println("[ERROR] No active subscription or HWID mismatch");
+            waitForExit();
             return;
         }
-        System.out.println("[SESSION] Подписка подтверждена");
+        System.out.println("[SESSION] Subscription confirmed");
 
         // 5. Stream and decrypt client
-        System.out.println("[CLIENT] Загрузка клиента с сервера...");
+        System.out.println("[CLIENT] Downloading client from server...");
         byte[] clientData = streamClient(session);
         if (clientData == null) {
-            System.out.println("[ERROR] Клиент не найден на сервере");
+            System.out.println("[ERROR] Client not found on server");
+            waitForExit();
             return;
         }
-        System.out.println("[CLIENT] Загружено " + (clientData.length / 1024) + " KB (зашифровано)");
+        System.out.println("[CLIENT] Downloaded " + (clientData.length / 1024) + " KB (encrypted)");
 
         // 6. Decrypt in memory
         byte[] decrypted = decrypt(clientData);
-        System.out.println("[CLIENT] Расшифровано " + (decrypted.length / 1024) + " KB");
+        System.out.println("[CLIENT] Decrypted " + (decrypted.length / 1024) + " KB");
 
-        // 7. Load JAR in memory via custom classloader
-        System.out.println("[CLIENT] Запуск клиента...");
-        loadAndRun(decrypted);
+        // 7. Save to temp and launch as separate process
+        System.out.println("[CLIENT] Starting client...");
+        launchClient(decrypted);
+    }
+
+    static void waitForExit() {
+        System.out.println("\nPress Enter to exit...");
+        try { new Scanner(System.in).nextLine(); } catch (Exception ignored) {}
     }
 
     // ── HWID Generation ────────────────────────────────
     static String getHWID() {
         try {
             StringBuilder sb = new StringBuilder();
-            // Motherboard serial
-            Process p = Runtime.getRuntime().exec(
-                new String[]{"wmic", "baseboard", "get", "serialnumber"}
-            );
+            Process p = Runtime.getRuntime().exec(new String[]{"wmic", "baseboard", "get", "serialnumber"});
             BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));
             String line;
             while ((line = br.readLine()) != null) {
                 line = line.trim();
                 if (!line.isEmpty() && !line.equals("SerialNumber")) sb.append(line);
             }
-            // CPU ID
-            p = Runtime.getRuntime().exec(
-                new String[]{"wmic", "cpu", "get", "ProcessorId"}
-            );
+            p = Runtime.getRuntime().exec(new String[]{"wmic", "cpu", "get", "ProcessorId"});
             br = new BufferedReader(new InputStreamReader(p.getInputStream()));
             while ((line = br.readLine()) != null) {
                 line = line.trim();
                 if (!line.isEmpty() && !line.equals("ProcessorId")) sb.append(line);
             }
-            // Disk serial
-            p = Runtime.getRuntime().exec(
-                new String[]{"wmic", "diskdrive", "get", "serialnumber"}
-            );
+            p = Runtime.getRuntime().exec(new String[]{"wmic", "diskdrive", "get", "serialnumber"});
             br = new BufferedReader(new InputStreamReader(p.getInputStream()));
             while ((line = br.readLine()) != null) {
                 line = line.trim();
                 if (!line.isEmpty() && !line.equals("SerialNumber")) { sb.append(line); break; }
             }
-
             MessageDigest md = MessageDigest.getInstance("SHA-256");
             byte[] hash = md.digest(sb.toString().getBytes());
             StringBuilder hex = new StringBuilder();
@@ -129,9 +126,7 @@ public class Launcher {
             if (resp == null) return null;
             int idx = resp.indexOf("\"token\":\"");
             if (idx < 0) return null;
-            int start = idx + 9;
-            int end = resp.indexOf("\"", start);
-            return resp.substring(start, end);
+            return resp.substring(idx + 9, resp.indexOf("\"", idx + 9));
         } catch (Exception e) { return null; }
     }
 
@@ -150,9 +145,7 @@ public class Launcher {
             if (resp == null || !resp.contains("\"ok\":true")) return null;
             int idx = resp.indexOf("\"session\":\"");
             if (idx < 0) return null;
-            int start = idx + 11;
-            int end = resp.indexOf("\"", start);
-            return resp.substring(start, end);
+            return resp.substring(idx + 11, resp.indexOf("\"", idx + 11));
         } catch (Exception e) { return null; }
     }
 
@@ -163,10 +156,8 @@ public class Launcher {
             conn.setRequestMethod("GET");
             conn.setRequestProperty("X-Session", session);
             conn.setConnectTimeout(10000);
-            conn.setReadTimeout(60000);
-
+            conn.setReadTimeout(120000);
             if (conn.getResponseCode() != 200) return null;
-
             InputStream is = conn.getInputStream();
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
             byte[] buf = new byte[8192];
@@ -176,7 +167,6 @@ public class Launcher {
         } catch (Exception e) { return null; }
     }
 
-    // ── HTTP Helper ────────────────────────────────────
     static String post(String urlStr, String json, String bearerToken) {
         try {
             URL url = new URL(urlStr);
@@ -186,7 +176,6 @@ public class Launcher {
             if (bearerToken != null) conn.setRequestProperty("Authorization", "Bearer " + bearerToken);
             conn.setDoOutput(true);
             conn.getOutputStream().write(json.getBytes());
-
             BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream()));
             StringBuilder sb = new StringBuilder();
             String line;
@@ -201,11 +190,9 @@ public class Launcher {
         byte[] encrypted = new byte[data.length - 16];
         System.arraycopy(data, 0, iv, 0, 16);
         System.arraycopy(data, 16, encrypted, 0, encrypted.length);
-
         String keyHexEnv = System.getenv("ENCRYPTION_KEY");
         String keyHex = keyHexEnv != null ? keyHexEnv : "0000000000000000000000000000000000000000000000000000000000000000";
         byte[] key = hexToBytes(keyHex);
-
         SecretKeySpec secretKey = new SecretKeySpec(key, "AES");
         Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
         cipher.init(Cipher.DECRYPT_MODE, secretKey, new IvParameterSpec(iv));
@@ -220,20 +207,55 @@ public class Launcher {
         return bytes;
     }
 
-    // ── Load JAR in memory ─────────────────────────────
-    static void loadAndRun(byte[] jarData) throws Exception {
-        Path temp = Files.createTempFile("jartix-", ".jar");
-        Files.write(temp, jarData);
+    // ── Launch Client ──────────────────────────────────
+    static void launchClient(byte[] jarData) throws Exception {
+        // Save JAR to temp
+        Path tempDir = Files.createTempDirectory("jartix");
+        Path tempJar = tempDir.resolve("client.jar");
+        Files.write(tempJar, jarData);
 
-        URLClassLoader loader = new URLClassLoader(
-            new URL[]{temp.toUri().toURL()},
-            Launcher.class.getClassLoader()
-        );
+        // Try to read Main-Class from manifest
+        String mainClass = null;
+        try (InputStream is = Files.newInputStream(tempJar)) {
+            Manifest manifest = new Manifest(is);
+            mainClass = manifest.getMainAttributes().getValue("Main-Class");
+        } catch (Exception ignored) {}
 
-        System.out.println("[CLIENT] Клиент загружен в память");
-        System.out.println("[CLIENT] Для запуска укажите main class в настройках");
+        // Build classpath
+        String classpath = tempJar.toAbsolutePath().toString();
 
-        Files.deleteIfExists(temp);
-        System.out.println("[CLIENT] Temp файл удалён");
+        // Build java command
+        String javaHome = System.getProperty("java.home");
+        String javaBin = javaHome + File.separator + "bin" + File.separator + "java";
+
+        ProcessBuilder pb;
+        if (mainClass != null && !mainClass.isEmpty()) {
+            System.out.println("[CLIENT] Main class: " + mainClass);
+            pb = new ProcessBuilder(javaBin, "-cp", classpath, mainClass);
+        } else {
+            System.out.println("[CLIENT] No Main-Class in manifest, using java -jar");
+            pb = new ProcessBuilder(javaBin, "-jar", classpath);
+        }
+
+        pb.inheritIO();
+        pb.directory(tempDir.toFile());
+
+        System.out.println("[CLIENT] Launching...");
+        Process process = pb.start();
+
+        // Wait for client to start, then cleanup
+        Thread cleanup = new Thread(() -> {
+            try {
+                process.waitFor();
+            } catch (Exception ignored) {}
+            try { Files.deleteIfExists(tempJar); } catch (Exception ignored) {}
+            try { Files.deleteIfExists(tempDir); } catch (Exception ignored) {}
+        });
+        cleanup.setDaemon(true);
+        cleanup.start();
+
+        int exitCode = process.waitFor();
+        System.out.println("[CLIENT] Client exited with code: " + exitCode);
+        waitForExit();
     }
 }
